data/derived/fa15/progs/unify/prog0186.ml.out
Characters 33-62:
  n = additivePersistence(n/10);;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         int
